// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a basic button 1`] = `
<button
  class="c-dTdqlH c-dTdqlH-kxlbib-variant-primary"
>
  Test
</button>
`;

exports[`Button renders a button with a startIcon 1`] = `
<button
  class="c-dTdqlH c-dTdqlH-kxlbib-variant-primary"
>
  <div
    class="c-hJgkFV c-hJgkFV-ijxSBfJ-css"
  >
    <svg
      data-testid="icon"
    />
  </div>
  Test
</button>
`;

exports[`Button renders a button with an endIcon 1`] = `
<button
  class="c-dTdqlH c-dTdqlH-kxlbib-variant-primary"
>
  Test
  <div
    class="c-hJgkFV c-hJgkFV-ieSlpoK-css"
  >
    <svg
      data-testid="icon"
    />
  </div>
</button>
`;

exports[`Button renders an icon button 1`] = `
<button
  class="c-bhXMVC"
  variant="icon"
>
  <div
    class="c-hJgkFV c-hJgkFV-ijVLVTy-css"
  >
    <svg
      data-testid="icon"
    />
  </div>
</button>
`;
